# CPURasterizer

./: CMakeLists.txt  README.md  a.out
include/: geometry.h  test.h
src/: geometry.cpp  main.cpp  main1.cpp  test.cpp
